# hdx-scraper-idmc-gidd

./: README.md  docker-compose.yml  docker-requirements.txt  hatch.toml  idmc.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py  run_env  test-requirements.txt
.github/workflows/: build.yaml  build.yml  publish.yaml  run-python-script.yaml  run-python-script.yml  run-python-tests.yml
config/: hdx_dataset_static.yaml  hdx_dataset_static.yml  hdx_resource_view_static.yml  hdx_resource_view_static_disaster.yml  project_configuration.yaml  project_configuration.yml  smtp_configuration.yml
tests/: conftest.py  test_idmc.py
tests/config/: project_configuration.yml
tests/fixtures/: Internal Displacements (New Displacements) – IDPs.csv  Internal Displacements (New Displacements) – IDPs_AFG.csv  Internal displacements (new displacements) associated with disasters.csv  Internal displacements (new displacements) associated with disasters_AFG.csv  Internally displaced persons - IDPs.csv  Internally displaced persons - IDPs_AFG.csv  disaster_data.csv  disaster_data_Afghanistan.csv  disaster_data_United Republic of Tanzania.csv  displacement_data.csv  displacement_data_Afghanistan.csv  displacement_data_United Republic of Tanzania.csv  idmc_disaster_all_dataset.xlsx  idmc_displacement_all_dataset.xlsx
tests/fixtures/input/: disaster_0.json  disaster_1.json  disaster_10.json  disaster_100.json  disaster_101.json  disaster_102.json  disaster_103.json  disaster_104.json  disaster_105.json  disaster_106.json  disaster_107.json  disaster_108.json  disaster_11.json  (+219 more)
(+5 files in other folders)
