#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-idmc-gidd"
requires-python = ">=3.8"
dependencies = [
    "hdx-python-api>= 6.4.5",
    "hdx-python-country>= 3.9.6",
    "hdx-python-utilities>= 3.8.8",
]

dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-idmc-gidd"

[project.optional-dependencies]
test = ["cydifflib", "pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.idmc.gidd__main__:main"
